# BinaryStarModel

./: README.md  link.txt
code/: 2-glfwTest
code/include/: VertexBuffer.h
code/res/shaders/: Basic.shader
code/src/: IndexBuffer.cpp  VertexBuffer.cpp
source/: CMakeLists.txt
source/include/: Camera.h  GUI.h  Grid.h  IndexBuffer.h  Input.h  Renderer.h  Shader.h  Vertex.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  Window.h  graphicsIncludes.h  gridPlot.h  input.h  mouse.h  particlePlotter.h  vendorIncludes.h
source/res/shaders/: Basic.shader  grid.shader
source/src/: Grid.cpp  IndexBuffer.cpp  Input.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  application.cpp  application.cu
src/: CMakeLists.txt
src/src/: application.cpp
